# cli_music_player

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
browse/: soundcloud.py
lysn/: main.py
lysn/browse/: soundcloud.py  youtube.py
lysn/flags/: help.py  update.py  version.py
